# easymodel_inference

./: Dockerfile  docker-compose.yml  pyproject.toml
model_inference_service/: app.py  config.py
